--- a/Home.css
+++ b/Home.css
@@ -1,12 +1,12 @@
 #background
-{ 
-   position: fixed; 
-   right: 0; 
-   bottom: 0; 
-   min-width: 100%; 
-   min-height: 100%; 
-   z-index: -1; 
- }
+{
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    opacity: 1;
+    z-index: -1;
+}
 
 body 
 {
