--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body
     border-collapse:collapse;
     background-color: #0000009d;
     position: relative;
+    top: 110px;
 }
 
 .tehdeh
@@ -43,7 +44,7 @@ body
 
 .image
 {
-    width:20%;
+    width:30%;
     padding: 10px;
     vertical-align: top;
     position: relative;
@@ -66,6 +67,80 @@ td
    display: none;
 }
 
+.hamburger
+{
+    display: flex;
+}
+
+button
+{
+    height: 37px;
+    border: 0px;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    background: rgb(17, 17, 17);
+    color: white;
+    font-family: 'Bitter', serif;
+    font-size: 9pt;
+}
+
+button:hover
+{
+    background: #2b2b2b;
+    font-size: 10pt;
+    border: 3px #383838af solid;
+}
+
+.CRP_mobile
+{
+    top:0;
+}
+
+.links_mobile
+{
+    top: 37px;
+}
+
+.contact_mobile
+{
+    top:74px;
+}
+
+.GOONS
+{
+    color: red;
+}
+
+.GOONS:hover
+{
+    font-size: 18pt;
+    font-weight: bold;
+}
+
+.OLR
+{
+    color: #00ff1e;
+}
+
+.OLR:hover
+{
+    font-size: 18pt;
+    font-weight:bold;
+}
+
+.Juice
+{
+    color: #a200ff;
+}
+
+.Juice:hover
+{
+    font-size: 18pt;
+    font-weight:bold;
+}
+
 }
 
 @media (min-width:700px)
@@ -80,7 +155,7 @@ td
     border-collapse: collapse;
     background-color: #0000009d;
     position: relative;
-    margin-top: 7px;
+    top: 95px;
 }
 
 .tehdeh
@@ -105,9 +180,29 @@ p
     font-family:'Courier New', Courier, monospace ;
 }
 
+.hamburger
+{
+    display: none;
+}
+
 .navbar
 {
     display:flex;
+}
+
+.CRP
+{
+    left:0;
+}
+
+.links
+{
+    left:33.4%
+}
+
+.contact
+{
+    left:66.8%
 }
 
 button
@@ -116,10 +211,12 @@ button
     width: 33.3%;
     color: white;
     height: 97px;
+    width:33.4333333%;
     border: 0px;
-    margin-top: 0;
+    top:0;
     font-family: 'Bitter', serif;
     font-size: 13pt;
+    position: fixed;
 }
 
 button:hover
