--- a/style.css
+++ b/style.css
@@ -13,6 +13,11 @@ body
 
 {
 
+table
+{
+    z-index: -1;
+}
+
 .about
 {
     border-radius: 10px;
@@ -25,7 +30,7 @@ body
 
 .description
 {
-    z-index: 1;
+    z-index: -1;
 }
 
 .tehdeh
@@ -59,13 +64,11 @@ td
 .navbar
 {
    display: none;
-   z-index: 101;
 }
 
 .hamburger
 {
     display: flex;
-    z-index: 100;
 }
 
 button
@@ -80,6 +83,7 @@ button
     color: white;
     font-family: 'Bitter', serif;
     font-size: 9pt;
+    z-index: 1;
 }
 
 button:hover
@@ -87,6 +91,7 @@ button:hover
     background: #2b2b2b;
     font-size: 10pt;
     border: 3px #383838af solid;
+    z-index: 1;
 }
 
 .CRP_mobile
@@ -143,6 +148,11 @@ button:hover
 
 {
 
+table
+{
+    z-index: -1;
+}
+
 .about
 {
     border-color: white;
@@ -156,7 +166,7 @@ button:hover
 
 .description
 {
-    z-index: 1;
+    z-index: -1;
 }
 
 .tehdeh
@@ -184,13 +194,11 @@ p
 .hamburger
 {
     display: none;
-    z-index: 100;
 }
 
 .navbar
 {
     display:flex;
-    z-index: 101;
 }
 
 .CRP
@@ -220,6 +228,7 @@ button
     font-family: 'Bitter', serif;
     font-size: 13pt;
     position: fixed;
+    z-index: 1;
 }
 
 button:hover
@@ -227,6 +236,7 @@ button:hover
     background: #2b2b2b;
     font-size: 14pt;
     border: 5px #383838af solid;
+    z-index: 1;
 }
 
 .GOONS
